Fix subcommand calling: space is not allowed in commands.
Behind the ssh server use "{ echo username; cat; } | socat - TCP4:localhost:9643" instead launching a java process.