@@ -9,6 +9,7 @@ import java.net.Socket;
 
 import com.rizsi.rcom.ChannelMultiplexer.ChannelOutputStream;
 import com.rizsi.rcom.cli.Client;
+import com.rizsi.rcom.util.ChainList;
 import com.rizsi.rcom.util.UtilStream;
 import com.rizsi.rcom.vnc.LogFilterOutpurStream;
 
@@ -31,9 +32,10 @@ public class StreamSourceVnc implements IChannelReader, AutoCloseable {
 		params=new StreamParametersVNC(streamName, client.id);
 		StreamDataDuplex data=(StreamDataDuplex)client.conn.shareStream(cos.getChannel(), params);
 		client.addListener(data.backChannel, this);
-		Process p=Runtime.getRuntime().exec(client.getArgs().program_x11vnc+" -connect localhost:"+localport
-				// +" -clip 200x200+50+50"
-				+" -localhost");
+		ChainList<String> command=new ChainList<>(client.getArgs().program_x11vnc,"-connect", "localhost:"+localport);
+		//command.addcs("-clip", "200x200+50+50");
+		command.add("-localhost");
+		Process p=new ProcessBuilder(command).start();
 		UtilProcess.streamErrorOfProcess(p.getErrorStream(), System.err);
 		UtilProcess.streamErrorOfProcess(p.getInputStream(), System.out);
 		s=ss.accept();
