@@ -7,6 +7,7 @@ import java.util.TreeMap;
 
 import com.rizsi.rcom.AbstractRcomArgs;
 import com.rizsi.rcom.StreamParametersVideo;
+import com.rizsi.rcom.util.ChainList;
 import com.rizsi.rcom.webcam.WebCamParameter;
 
 import hu.qgears.commons.UtilProcess;
@@ -18,13 +19,15 @@ public enum EPlatform {
 		@Override
 		public Map<String, WebCamParameter> getCameras(AbstractRcomArgs args) throws Exception {
 			Map<String, WebCamParameter> ret = new TreeMap<>();
-			List<String> devs = UtilString.split(UtilProcess.execute(args.program_v4l2+" --list-devices"), "\r\n");
+			ChainList<String> command=new ChainList<>(args.program_v4l2, "--list-devices");
+			List<String> devs = UtilString.split(UtilProcess.execute(new ProcessBuilder(command).start()), "\r\n");
 			for (String line : devs) {
 				if (line.startsWith("\t")) {
 					String dev = line.trim();
 					System.out.println("Dev: '" + dev + "'");
-					String sizesCmd = args.program_ffmpeg+" -f v4l2 -list_formats all -i " + dev;
-					byte[] errOut = UtilProcess.saveOutputsOfProcess(Runtime.getRuntime().exec(sizesCmd)).get().getB();
+					ChainList<String> sizesCmd=new ChainList<>(args.program_ffmpeg, "-f", "v4l2", "-list_formats", "all");
+					sizesCmd.addcs("-i", dev);
+					byte[] errOut = UtilProcess.saveOutputsOfProcess(new ProcessBuilder(sizesCmd).start()).get().getB();
 					List<String> lines = UtilString.split(new String(errOut, StandardCharsets.UTF_8), "\r\n");
 					for (String l : lines) {
 						if (l.startsWith("[")) {
@@ -52,9 +55,9 @@ public enum EPlatform {
 		}
 
 		@Override
-		public String createWebCamStreamCommand(AbstractRcomArgs args, WebCamParameter wcp,
+		public ChainList<String> createWebCamStreamCommand(AbstractRcomArgs args, WebCamParameter wcp,
 				StreamParametersVideo params) {
-			return args.program_ffmpeg+" -f v4l2 -framerate "+params.framerate+" -video_size "+params.width+"x"+params.height+" -i "+wcp.getDevice()+" -f "+params.encoding+" -";
+			return new ChainList<>(args.program_ffmpeg).addcall(UtilString.split("-f v4l2 -framerate "+params.framerate+" -video_size "+params.width+"x"+params.height+" -i "+wcp.getDevice()+" -f "+params.encoding+" -", " "));
 		}
 	},
 	windows{
@@ -65,16 +68,18 @@ public enum EPlatform {
 		}
 		
 		@Override
-		public String createWebCamStreamCommand(AbstractRcomArgs args, WebCamParameter wcp,
+		public ChainList<String> createWebCamStreamCommand(AbstractRcomArgs args, WebCamParameter wcp,
 				StreamParametersVideo params) {
+			ChainList<String> ret=new ChainList<>(args.program_ffmpeg, "-f", "dshow", "-video_size", ""+params.width+"x"+params.height, "-i", "video=\""+wcp.getDevice()+"\"", "-f", params.encoding);
 			// TODO framerate
-			String framerate=" -framerate "+params.framerate+" ";
-			return args.program_ffmpeg+" -f dshow -video_size "+params.width+"x"+params.height+" -i video=\""+wcp.getDevice()+"\" -f "+params.encoding+" -";
+			// ret.addcs("-framerate", ""+params.framerate);
+			ret.addc("-");
+			return ret;
 		}
 		
 	};
 
 	abstract public Map<String, WebCamParameter> getCameras(AbstractRcomArgs args) throws Exception;
 
-	abstract public String createWebCamStreamCommand(AbstractRcomArgs abstractRcomArgs, WebCamParameter wcp, StreamParametersVideo params);
+	abstract public ChainList<String> createWebCamStreamCommand(AbstractRcomArgs abstractRcomArgs, WebCamParameter wcp, StreamParametersVideo params);
 }
